[package]
name = "srsrssrsbot"
version = "0.1.0"
authors = ["Lonami Exo <totufals@hotmail.com>"]
edition = "2018"

[dependencies]
grammers-client = { git = "https://github.com/Lonami/grammers.git", rev = "d91dc82" }
grammers-session = { git = "https://github.com/Lonami/grammers.git", rev = "d91dc82" }
reqwest = "0.11.3"
feed-rs = "0.6.0"
chrono = "0.4.19"
tokio = { version = "1.5.0", features = ["full"] }
log = "0.4.14"
simple_logger = "1.11.0"
sqlite = "0.26.0"

# Use vendored openssl. We don't depend on it directly.
openssl = { version = "0.10.55", features = ["vendored"], optional = true }

[features]
vendored-openssl = ["openssl"]
