[package]
name = "srsrssrsbot"
version = "0.1.0"
authors = ["Lonami Exo <totufals@hotmail.com>"]
edition = "2018"

[dependencies]
grammers-client = { path = "../grammers/lib/grammers-client" }
grammers-session = { path = "../grammers/lib/grammers-session" }
reqwest = "0.11.3"
feed-rs = "1.3.0"
chrono = "0.4.19"
tokio = { version = "1.5.0", features = ["full"] }
log = "0.4.14"
simple_logger = "1.11.0"
sqlite = "0.26.0"
